adding modified files to experiments branch

--- a/advice/karenchanel-advice.html
+++ b/advice/karenchanel-advice.html
@@ -18,7 +18,7 @@
 	<section>
 		<div class="advice">
 			<h4>Its Hard!</h4>
-			<p>Learning to code is hard, not in the sense that you cant figure it out, but it changes the way you think or atleast it should. Life starts to look like one big coding game.</p>
+			<p>Learning to code is hard, not in the sense that you cant figure it out, but it changes the way you think or atleast it should. Life starts to look like one big coding game. Always practices to strenghten your knowledge.</p>
 
 			<h4>Imposter Syndrome is Real</h4>
 			<p>A part of me thinks that even the most senior developers feel like imposters. Its definitely real when your starting out and then wanting someone to pay you for it.</p>
