--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<section>
 		<div class="all-advice-links">
 			<div class="skillcrush">
+			<a href="advice/karenchanel-advice.html">Karen Chanel's Advice</a>
 			<a href="advice/melissam-advice.html">Melissa M's Advice for Newbies</a>
 			<a href="advice/segh-advice.html">Susan's Tips</a>
 			<a href="advice/advice-acapella.html">Some Advice from Amanda</a><br>
